[package]
name = "mim"
version = "0.0.2"
edition = "2021"
bin = ["src/main.rs"]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
atty = "0.2.14"

[[bin]]
name = "mim"
path = "src/main.rs"
